force-app/main/default/objects/Sales_Assistant__c/Sales_Assistant__c.object-meta.xml
<CustomObject>
    <label>Sales Assistant</label>
    <nameField>
        <label>Sales Assistant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Assistants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>