force-app/main/default/objects/Sales_Assistant__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>