force-app/main/default/objects/Sales_Assistant__c/fields/GVIpos_ID__c.field-meta.xml
<CustomField>
    <fullName>GVIpos_ID__c</fullName>
    <externalId>true</externalId>
    <label>GVIpos ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>