force-app/main/default/objects/Sales_Assistant__c/fields/Home_Store__c.field-meta.xml
<CustomField>
    <fullName>Home_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Sales Assistants</relationshipLabel>
    <relationshipName>Sales_Assistants</relationshipName>
    <type>Lookup</type>
</CustomField>