force-app/main/default/objects/Sales_Assistant__c/fields/Incoming_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Salesperson__c</fullName>
    <label>Incoming Salesperson</label>
    <length>200</length>
    <type>Text</type>
</CustomField>