force-app/main/default/objects/Sales_Assistant__c/fields/Is_myClienteling_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_myClienteling_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is myClienteling Enabled?</label>
    <type>Checkbox</type>
</CustomField>