force-app/main/default/objects/Sales_Assistant__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <formula>ISBLANK(Deactivation_Date__c) || DATEVALUE(Deactivation_Date__c) &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>