force-app/main/default/objects/Sales_Assistant__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>Date and time when the record was modified.</description>
    <label>Modified On</label>
    <type>DateTime</type>
</CustomField>