force-app/main/default/objects/Sales_Assistant__c/fields/Lock_Type__c.field-meta.xml
<CustomField>
    <fullName>Lock_Type__c</fullName>
    <label>Lock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>166100000</fullName>
                <default>true</default>
                <label>Not Reassigned</label>
            </value>
            <value>
                <fullName>166100001</fullName>
                <label>Temporary</label>
            </value>
            <value>
                <fullName>166100002</fullName>
                <label>Definitive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>