force-app/main/default/objects/Sales_Assistant__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>225540010</fullName>
                <label>Sales Person</label>
            </value>
            <value>
                <fullName>225540020</fullName>
                <label>Store Manager</label>
            </value>
            <value>
                <fullName>225540030</fullName>
                <label>Area Manager</label>
            </value>
            <value>
                <fullName>225540040</fullName>
                <label>Headquarter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>