force-app/main/default/objects/Sales_Assistant__c/listViews/Sales_Assistant_List_View.listView-meta.xml
<ListView>
    <fullName>Sales_Assistant_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Sales Assistant List View</label>
</ListView>